backup/patch/kwin-erors.txt
Consolidate compiler generated dependencies of target KWinWaylandWaylandBackend
[ 87%] Built target KWinWaylandWaylandBackend
[ 87%] Automatic MOC for target eglx11common
[ 87%] Built target eglx11common_autogen
Consolidate compiler generated dependencies of target eglx11common
[ 87%] Building CXX object src/plugins/platforms/x11/common/CMakeFiles/eglx11common.dir/eglonxbackend.cpp.o
/tmp/kde_build/plasma/kwin-5.22.4/src/plugins/platforms/x11/common/eglonxbackend.cpp: In member function 'void* KWin::EglOnXBackend::createSurface(xcb_window_t)':
/tmp/kde_build/plasma/kwin-5.22.4/src/plugins/platforms/x11/common/eglonxbackend.cpp:227:66: error: invalid conversion from 'xcb_window_t' {aka 'unsigned int'} to 'EGLNativeWindowType' {aka 'void*'} [-fpermissive]
  227 |         surface = eglCreateWindowSurface(eglDisplay(), config(), window, nullptr);
      |                                                                  ^~~~~~
      |                                                                  |
      |                                                                  xcb_window_t {aka unsigned int}
make[2]: *** [src/plugins/platforms/x11/common/CMakeFiles/eglx11common.dir/build.make:90: src/plugins/platforms/x11/common/CMakeFiles/eglx11common.dir/eglonxbackend.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:8960: src/plugins/platforms/x11/common/CMakeFiles/eglx11common.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
plasma:kwin failed to build.

